--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 	
         <h2>In brief</h2>
 	
-        <p> I obtained a bachelor degree in <a target="_blank" href="http://www.lcg.unam.mx/"><b>Genomic Sciences</b></a> from the UNAM (Universidad Nacional Autonoma de Mexico) in Cuernavaca, Mexico. After that I moved to France where I obtained a master degree in Systems Biology from the <a target="_blank" href="https://www.psl.eu/en/education/master-s-degree-life-sciences">IMaLiS program</a>  at the ENS (Ecole normale Superieure) in Paris, France. Also in France I obtained a PhD degree from the Aix-Marseille Universite in Marseille in 2017. From 2017 to 2022 I worked as a post-doctoral researcher at <a target="_blank" href="https://mathelierlab.com/">Anthony Mathelier's lab</b></a> in Oslo, Norway.
+        <p> Extensive experience in research, statistical analysis, and predictive simulations. Passionate about chemistry, mathematics, learning and complex problems. Eager to create research that will make our quickly changing world a better place in a team of like-minded colleagues. Core competencies include the ability to quickly abstract the key components of complex matters, the ability to stay extremely focused on a goal over a long period of time and experience working in multinational teams both as lead and as key subject contributor.
 	
         <div class="row">
 	  
