--- a/index.html
+++ b/index.html
@@ -409,9 +409,16 @@
                 <td valign=top style="width:700px;height:auto;"> <a href="https://pubs.acs.org/doi/10.1021/jacs.9b11829" target="_blank"><i> The Grignard Reaction – Unraveling a Chemical Puzzle </i></a><br>
                   Raphael Mathias Peltzer, Jürgen Gauss, Odile Eisenstein*, and Michele Cascella* J. Am. Chem. Soc. 2020, 142, 6, 2984–2994
                   Publication Date:January 17, 2020 </td>
-					       <td valign=top style="width:auto;height:auto;display:inline-table;vertical-align:top;margin-left:80px"><a href="https://pubs.acs.org/doi/10.1021/jacs.9b11829" target="_blank"><img class="paper_img" src="images/Paper_5.gif" /></a></td>
+					       <td valign=top style="width:auto;height:auto;display:inline-table;vertical-align:top;margin-left:80px"><a href="https://pubs.acs.org/doi/10.1021/jacs.9b11829" target="_blank"><img class="paper_img" src="images/Paper_5.png" /></a></td>
               </tr> 
 
+              <tr colspan=3 valign=top align=left style="font-size:15px;display:inline-table;vertical-align:top;">
+                <td valign=top style="width:15px;height:auto;">5. </td>
+                <td valign=top style="width:700px;height:auto;"> <a href="https://pubs.acs.org/doi/10.1021/acs.jpcb.8b05936" target="_blank"><i> Self-Assembly of α-Tocopherol Transfer Protein Nanoparticles: A Patchy Protein Model </i></a><br>
+                  Raphael Mathias Peltzer, Hima Bindu Kolli, Achim Stocker*, and Michele Cascella* J. Phys. Chem. B 2018, 122, 28, 7066–7072
+                  Publication Date:June 26, 2018 </td>
+					       <td valign=top style="width:auto;height:auto;display:inline-table;vertical-align:top;margin-left:80px"><a href="https://pubs.acs.org/doi/10.1021/acs.jpcb.8b05936" target="_blank"><img class="paper_img" src="images/ATTP.png" /></a></td>
+              </tr> 
 
               
             </table>
