--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
 	
         <h2>In brief</h2>
 	
-        <p> I obtained a bachelor degree in <a target="_blank" href="http://www.lcg.unam.mx/"><b>Genomic Sciences</b></a> from the UNAM (Universidad Nacional Autonoma de Mexico) in Cuernavaca, Mexico. After that I moved to France where I obtained a master degree in Systems Biology from the <a target="_blank" href="https://www.psl.eu/en/education/master-s-degree-life-sciences">IMaLiS program</a>  at the ENS (Ecole normale Superieure) in Paris, France. Also in France I obtained a PhD degree from the Aix-Marseille Universite in Marseille in 2017. From 2017 to 2022 I worked as a post-doctoral researcher at <a target="_blank" href="https://mathelierlab.com/">Anthony Mathelier's lab</b></a> in Oslo, Norway.
-	
+        <p> I obtained a bachelor degree in <b>Chemistry</b>from the Technical University of Munich, where I finished the first two semesters in 6 months and hereafter finished a Master's degree in <b>Computational and Theoretical Chemistry</b>at the University of Oxford within 12 months. At the age of 26 I obtained a PhD in <b>Computational Chemistry</b> from the Centre of Theoreitcal and Computational Chemistry (CTCC), a Norwegian Centre of Excellence. This centre is now the <a target="_blank" href="https://www.mn.uio.no/hylleraas/english/"><b>Hylleraas Centre</b> </a> in Oslo, Norway. <br>
+        While earning the PhD degree I simulataneously qualified for the World Championship in Hearthstone, a strategic card game played by millions across the globe. Since 2019 I have been competing in Hearthstone, where I applied the analytical and computational skills from my previous education to become the world's most decorated competitor (including 1st place at both the Team and Individual World Championship).
         <div class="row">
 	  
           <div class="columns contact-details">
@@ -222,9 +222,10 @@
 	  </div>
 	  
 	</div> <!-- item end -->
-</div> <!-- main-col end -->
+
+      </div> <!-- main-col end -->
       
-</div> <!-- End Education -->
+    </div> <!-- End Education -->
   
    
 
