--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
       <div class="banner-text">
 
 	<h2 style="color:white"><span>Raphael Peltzer's webiste</span></h2>
-        <h3> I am a computational chemist and professional Esports competitor. My scientific interest lies with the simulation of organic chemistry and biochemistry as well as predictive modeling. As an Esports professional I used </span>
+        <h3> I am a computational chemist and professional Esports competitor. My scientific interest lies with the simulation of organic chemistry and biochemistry as well as predictive modeling. As an Esports professional I used the analytical approach and computational skills to professionalise competition and become a world renowed competitor. I am on the lookout for a new challenge to apply
+          my love for (data)analytics, complex problem solving, finding creative solutions and science to good use in society. </span>
         <hr/>
         <ul class="social">
 	  <li><a href="#about"><i class="fa fa-user"></i></a></li>
@@ -115,7 +116,7 @@
       
       <div class="three columns">
 	
-        <img class="profile-pic"  src="images/RaphaelPeltzer.jpg" alt="" />
+        <img class="profile-pic"  src="images/GOLD-image.jpg" alt="" />
 	
       </div>
       
